--- a/dav.1/davaleba 4.html
+++ b/dav.1/davaleba 4.html
@@ -15,7 +15,7 @@
 </style>    
 </head>
 <body><ul><ul><ul> 
-  <h1 >საქარტველოს კუთხები</h1>
+  <h1 >საქართველოს კუთხები</h1>
   <p><br><strong><ul style="color: rgb(0, 0, 0);"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEho_z2nNB07K5b9GN9qQZI57Zqv3Ms29zyax_sX6A30n0OaGWflKsMV9T6dRz1kUnVq3w5mwv9vYd-MwY2GF_RuphHo134Q6oXDQTZR-hJ5qcEzmJByQnqh6IpTB63S46okEDA23p9TQKZ2/w1200-h630-p-k-no-nu/saqartvelosruka.jpg" style=float:right;width:350px;height:220px;">
       <li>იმერეთი</li>
       <li>ქართლი</li>
